--- a/src/pages/script.html
+++ b/src/pages/script.html
@@ -1,5 +1,8 @@
 <!--some scripts config should be here-->
 <script type="text/javascript">
 
-
+$(function(){var io=new IntersectionObserver(callback,{rootMargin:"0px 0px 0px 0px"});var imgs=document.querySelectorAll('[data-src]');function callback(entries){entries.forEach(function(item){if(item.isIntersecting){item.target.src=item.target.dataset.src;io.unobserve(item.target);item.removeAttribute('data-src');}});}
+imgs.forEach(function(item){io.observe(item);});});function lazyloadImg(){}
+var host={index:'http://www.job.com'};var Router={getCat:{host:host.index,path:'/getMine',type:'get',response:{status:200,data:[1,2,3]}}};for(var item in Router){Mock.mock(Router[item].host+Router[item].path,Router[item].type,function(options){return Router[item].response;});}
+$.ajax({url:"http://www.job.com/getMine",type:"get",success:function success(data){console.log(data);},error:function error(e){console.log(e);}});
 </script>
