--- a/src/pages/js.html
+++ b/src/pages/js.html
@@ -1,3 +1,4 @@
 </div>
 <!--all js here-->
-<script type="text/javascript" language="JavaScript" src="/dist/combine.min.js"></script>
+<script type="text/javascript" language="JavaScript" src="//storage.jd.com/cmsc/combine.min.js"></script>
+
